[package]
name = "conv"
version = "0.1.0"
edition = "2021"
authors = ["Gurjant Kalsi <me@gurjantkalsi.com>"]
description = "Convert units on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }